force-app/main/default/objects/Asset/fields/Certificate_Id__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Id__c</fullName>
    <label>Certificate Id</label>
    <description>AWS IoT certificate id. The private key is deliberately NOT stored here.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>