force-app/main/default/objects/Asset/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <description>Semantic version last reported by the device; updated by the OTA saga (branch 09).</description>
    <length>50</length>
    <type>Text</type>
</CustomField>