force-app/main/default/objects/Asset/fields/Last_Telemetry_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Telemetry_At__c</fullName>
    <label>Last Telemetry At</label>
    <description>When the device last reported. Drives the DEVICE_DISCONNECTED alert.</description>
    <type>DateTime</type>
</CustomField>