force-app/main/default/objects/Asset/fields/Provisioning_Bundle_URL__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Bundle_URL__c</fullName>
    <label>Provisioning Bundle URL</label>
    <description>Short-lived pre-signed S3 link to the credential bundle. Expires; the key never rests in Salesforce.</description>

    <type>Url</type>
</CustomField>