force-app/main/default/objects/Asset/fields/Provisioning_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Expires_At__c</fullName>
    <label>Bundle Expires At</label>
    <description>After this, the link is dead and the device must be re-provisioned.</description>

    <type>DateTime</type>
</CustomField>