force-app/main/default/objects/Asset/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <label>Provisioning Status</label>
    <description>Lifecycle of this device's AWS IoT identity.</description>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Not Provisioned</fullName><default>true</default><label>Not Provisioned</label></value>
        <value><fullName>Provisioned</fullName><default>false</default><label>Provisioned</label></value>
        <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        <value><fullName>Revoked</fullName><default>false</default><label>Revoked</label></value>
    </valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>