force-app/main/default/objects/Asset/fields/Thing_ARN__c.field-meta.xml
<CustomField>
    <fullName>Thing_ARN__c</fullName>
    <label>Thing ARN</label>
    <description>AWS IoT Thing created for this Asset.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>