force-app/main/default/objects/Asset/fields/Thing_Group__c.field-meta.xml
<CustomField>
    <fullName>Thing_Group__c</fullName>
    <label>Thing Group</label>
    <description>OTA targeting audience, e.g. canary-ring-1 or patient-monitors.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>