force-app/main/default/objects/Asset/fields/Wi_Fi_Network__c.field-meta.xml
<CustomField>
    <fullName>Wi_Fi_Network__c</fullName>
    <label>Wi-Fi Network</label>
    <description>Which network this device joins. Set before provisioning.</description>
    <referenceTo>Wi_Fi_Network__c</referenceTo>
    <relationshipName>Devices</relationshipName>
    <relationshipLabel>Devices</relationshipLabel>
    <type>Lookup</type>
</CustomField>